kubernetes/deployment-3.yaml
#
# kubectl create configmap spring-boot-configmaps-demo --from-literal=custom.property="from configmap as property"
#
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: springboot-demo
  name: springboot-demo
spec:
  replicas: 1
  selector:
    matchLabels:
      app: springboot-demo
  strategy: {}
  template:
    metadata:
      labels:
        app: springboot-demo
    spec:
      containers:
      - image: iconsent/springboot-demo
        name: springboot-demo
        resources: {}
status: {}
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: springboot-demo
  name: springboot-demo
spec:
  ports:
  - name: 8080-8080
    port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    app: springboot-demo
  type: ClusterIP
status:
  loadBalancer: {}
