kubernetes/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: "springboot-demo-ingress"
  annotations:
    kubernetes.io/ingress.class: "public"
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
    - host: mk8s.info    
      http:
        paths:
         - path: /backend/(.+)
           pathType: ImplementationSpecific
           backend: 
            service: 
              name: springboot-demo
              port: 
                number: 8080
